<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DCD9D9"
        android:text="@string/material_manilla"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgpMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbCuero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mostrar_dije_cuero"
            android:text="@string/radioButtonCuero"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbCuerda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mostrar_dije_cuerda"
            android:text="@string/radioButtonCuerda"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/lblColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3" />

    <LinearLayout
        android:id="@+id/llDije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/lblDije"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DCD9D9"
            android:text="@string/dije_manilla"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgpDije"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbMartillo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="mostrar_tipo_martillo"
                android:text="@string/radioButtonMartillo"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbAncla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="mostrar_tipo_ancla"
                android:text="@string/radioButtonAncla"
                android:textSize="18sp" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/lblColor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3" />

    <LinearLayout
        android:id="@+id/llTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/lblTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DCD9D9"
            android:text="@string/tipo_manilla"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgpTipo"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rbOro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="mostrar_valor_oro"
                android:text="@string/radioButtonOro"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbOroRosa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="mostrar_valor_oro_rosado"
                android:text="@string/radioButtonOroRosa"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbPlata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="mostrar_valor_plata"
                android:text="@string/radioButtonPlata"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rbNiquel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="mostrar_valor_niquel"
                android:text="@string/radioButtonNiquel"
                android:textSize="18sp" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/lblColor3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3" />

    <LinearLayout
        android:id="@+id/llValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/lblValorUnitario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/valor_unitario"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblCantidad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cantidad_manillas"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/lblnCantidad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/lblEspacio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="valor_total"
            android:text="@string/btnCalcular" />

        <TextView
            android:id="@+id/lblColor4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2196F3" />

        <LinearLayout
            android:id="@+id/llResultado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/lblContenido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/precioTotal"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/swtMoneda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:onClick="moneda_cambio"
                android:text="@string/dolares" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>